--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta property="og:title" content="Play Ludo & Win 2x | WinGames.club" />
 <meta property="og:description" content="No fees, no KYC, win 2x cash instantly. Withdraw up to ₹5000. Start winning today!" />
-<meta property="og:image" content="https://ibb.co/s9S3r407" />
+<meta property="og:image" content="https://i.ibb.co/pBb1nRwL/whats-app-image-2.png" />
 <meta property="og:url" content="https://wingames.club/" />
 <meta property="og:type" content="website" />
     <link rel="icon" type="image/x-icon" href="src/assets/Screenshot 2025-05-19 at 6.18.43 PM.ico" />
