--- a/index.html
+++ b/index.html
@@ -10,9 +10,23 @@
     <link rel="icon" type="image/x-icon" href="src/assets/Screenshot 2025-05-19 at 6.18.43 PM.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wingames</title>
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#009688">
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', function() {
+          navigator.serviceWorker.register('/service-worker.js')
+            .then(function(registration) {
+              console.log('ServiceWorker registration successful with scope: ', registration.scope);
+            }, function(err) {
+              console.log('ServiceWorker registration failed: ', err);
+            });
+        });
+      }
+    </script>
   </body>
 </html>
