changed the name of the pwa

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta property="og:title" content="Play Ludo & Win 2x | WinGames.club" />
+    <meta property="og:title" content="Play & Win 2x | WinGames.club" />
 <meta property="og:description" content="No fees, no KYC, win 2x cash instantly. Withdraw up to ₹5000. Start winning today!" />
 <meta property="og:image" content="https://i.ibb.co/pBb1nRwL/whats-app-image-2.png" />
 <meta property="og:url" content="https://wingames.club/" />
