--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 <meta property="og:image" content="https://i.ibb.co/pBb1nRwL/whats-app-image-2.png" />
 <meta property="og:url" content="https://wingames.club/" />
 <meta property="og:type" content="website" />
-    <link rel="icon" type="image/x-icon" href="src/assets/Screenshot 2025-05-19 at 6.18.43 PM.ico" />
+    <link rel="icon" type="image/jpeg" href="src/assets/PHOTO-2025-05-24-08-04-28.jpg" />
+    <link rel="apple-touch-icon" href="src/assets/PHOTO-2025-05-24-08-04-28.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wingames</title>
+    <meta property="og:image" content="https://wingames.club/src/assets/PHOTO-2025-05-24-08-04-28.jpg" />
+    <meta name="twitter:image" content="https://wingames.club/src/assets/PHOTO-2025-05-24-08-04-28.jpg" />
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#009688">
   </head>
